# MyAutomationSuite

./: .envrc  .gitignore  2026_0004_001_português_Test_FB_15.xlsx  2026_0004_001_português_Test_FB_15_corrected.xlsx  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  THIRDPARTY_LICENSES.md  about.toml  app.cdx.json  check.go  deny.toml  patch2.py  prek.toml  release.toml  test_array2.py  test_array_formula.go  test_dash.go  test_dv.go  test_empty.json  test_iface.go  test_pkg.xlsx  test_prot.rs  test_rate.xlsx  test_unshared.xlsx  test_unshared_grid.xlsx  test_unshared_twopass.xlsx  test_writer.rs  third-party-licenses.html  time_test.go  vorpruefung_output.xlsx  vorpruefung_output_corrected.xlsx
.github/workflows/: build-windows.yml  ci.yml
.nix/: flake.nix
app/: Cargo.toml  app.cdx.json  build.rs  gui.cdx.json
app/src/: main.rs  updater.rs
app/src/features/: mod.rs
app/src/features/budget_to_fb/: config.rs  models.rs  ui.rs  utils.rs
app/src/features/budget_to_vp/: config.rs  mod.rs  models.rs  ui.rs  utils.rs
app/src/features/fb_generator/: config.rs  mod.rs  models.rs  ui.rs
app/src/features/folder_generator/: config.rs  ui.rs  utils.rs
app/src/shared/: mod.rs  models.rs  process.rs  utils.rs
app/src/shell/: config.rs  mod.rs  ui.rs  updater.rs
app/ui/: budget_to_fb.slint  components.slint  fb_page.slint  folder_page.slint  home.slint  home_page.slint  main.slint  state.slint  vorpruefung_page.slint
app/ui/features/: budget_to_fb.slint  budget_to_vp.slint  fb_generator.slint  folder_generator.slint
app/ui/shared/: components.slint  state.slint
app/ui/shell/: home.slint
core/budget_scanner/: Cargo.toml  budget_scanner.cdx.json
core/budget_scanner/src/: lib.rs  main.rs
core/budget_scanner/tests/: Cost-_and_financing_plan_V2(3).xlsx  Pruefvorlage_2026_0001_001_english.xlsx  integration.rs
core/excel_protection/: Cargo.toml  excel_protection.cdx.json
core/excel_protection/src/: color_routing.rs  dynamic_unlock.rs  lib.rs
core/excel_protection/tests/: integration.rs  test_daten_rewrite.rs  test_debug.rs  test_fixed_values.rs
core/folder_generator/: Cargo.toml  app.cdx.json
core/folder_generator/examples/: test_fmt.rs
core/folder_generator/src/: lib.rs
core/shared_constants/: Cargo.toml  build.rs  excel_constants.json
scripts/: bump_sidecar_versions.sh
sidecars/: go.work  go.work.sum
sidecars/Excelize/: .gitignore  SIDECAR_INTEGRATION.md  go.mod  test_calcchain.go  test_calcchain2.go  test_multiple.json  test_pkg_delete.go  test_set_row.go
sidecars/Excelize/cmd/report_generator/: main.go
sidecars/Excelize/pkg/report/: api.go  cleanup.go  embed_export.go  excel_utils.go  groupings.go  models.go  pipeline.go  postprocess.go  preprocessing.go  unshare.go
sidecars/FB/: .gitignore  go.mod
sidecars/Vorpruefung/: .gitignore  SHEET_ARCHITECTURE.md  auswertung.go  auswertung_panels.go  budget.example.json  budget.go  check.go  config.go  config_test.go  dashboard.go  daten.go  dynarray.go  finanzbericht.go  go.mod  kmw_mittel.go  main.go  mittelanforderung.go  output.xlsx  test_clean.xlsx  test_empty.xlsx  test_filter3.xlsx  test_none.xlsx  test_spill.xlsx  vorpruefung_befuellt.xlsx  vorpruefung_output.xlsx
sidecars/Vorpruefung/testfill/: create_three.go  main.go
sidecars/shared/: go.mod
sidecars/shared/constants/: generate.go  generated_constants.go  generator.go
sidecars/shared/excel/: protection.go
sidecars/shared/models/: budget.go
sidecars/shared/runner/: runner.go
test/excel-routing-test/: Cargo.toml
test/excel-routing-test/src/: main.rs
test/excel-routing-test/tmp/: Pruefvorlage_2026_0004_001_deutsch_1_geschuetzt.xlsx
test/excel-routing-test/tmp_speedtest/: file_508.xlsx
test/rust-excel/: Cargo.toml
test/rust-excel/src/: main.rs
testdata/Pruefvorlage/: Pruefvorlage_2026_0004_001_deutsch_1.xlsx  test_insert_output.xlsx
(+47 files in other folders)
