[workspace]
resolver = "2"
members = [
    "core/budget_scanner",
    "core/folder_generator",
    "core/excel_protection",
    "app"
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.87"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Deine internen Crates
budget_scanner = { path = "core/budget_scanner" }
folder_generator = { path = "core/folder_generator" }
excel_protection = { path = "core/excel_protection" }

# Geteilte externe Abhängigkeiten
serde = { version = "1", features = ["derive"] }
slint = { version = "1.15.1", default-features = false }
slint-build = "1.15.1"
thiserror = "2"
rust_xlsxwriter = "0.94"
rayon = "1"
