[workspace]
resolver = "2"
members = [
    "core/budget_scanner",
    "core/folder_generator",
    "core/excel_protection",
    "core/shared_constants",
    "app"]

[workspace.package]
version = "0.6.0"
edition = "2021"
rust-version = "1.87"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
shared_constants = { path = "core/shared_constants" }
budget_scanner = { path = "core/budget_scanner" }
folder_generator = { path = "core/folder_generator" }
excel_protection = { path = "core/excel_protection" }

# Geteilte externe Abhängigkeiten
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.17.0", default-features = false }
slint-build = "1.17.0"
thiserror = "2"
rayon = "1.11"
rust_xlsxwriter = "0.95.0"
