[package]
name = "budget_scanner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
calamine = "0.34.0"
comfy-table = "7"
rayon = { workspace = true }
regex = "1"
walkdir = "2"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
