[package]
name = "excel_protection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
byteorder = "1.5"
quick-xml = "0.36"
sha2 = "0.10"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
getrandom = "0.2"
serde = { workspace = true }
